<resources>

    <!-- Home Screen Group-->
    <string name="app_name">Beacon</string>
    <string name="title_activity_map">Map</string>
    <string name="list_beacons">List Beacons</string>
    <string name="filter">Filter</string>
    <string name="search_for_beacon">Search Beacons</string>
    <string name="about">About</string>
    <string name="my_created_beacons">My Created Beacons</string>
    <string name="my_saved_beacons">My Saved Beacons</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="search_hint">Search Beacons</string>

    <!-- Create Beacon -->
    <string name="create_beacon">Create Beacon</string>

    <!-- Create Beacon Name Group -->
    <string name="create_beacon_name_label">Name*</string>
    <string name="create_beacon_name">Beacon Name</string>

    <!-- Address Group -->
    <string name="create_beacon_address_label">Address*</string>
    <string name="create_beacon_address">Street Address</string>

    <!-- Create Beacon Tags Group -->
    <string name="create_beacon_tag_label">Tags*</string>
    <string name="create_beacon_tag">Choose tags</string>

    <!-- Create Beacon Phone Group -->
    <string name="create_beacon_phone_label">Phone</string>
    <string name="create_beacon_phone">Primary Phone Number</string>

    <!-- Create Beacon Website Group -->
    <string name="create_beacon_web_label">Website</string>
    <string name="create_beacon_web">Official Website</string>

    <!-- Hours Group -->
    <string name="create_beacon_hours_label">Hours</string>
    <string name="create_beacon_hours">Select days and hours</string>

    <!-- Photos Group -->
    <string name="create_beacon_photos_label">Photo</string>

    <string name="app_version">Version 1.0</string>
    <string name="attribution_text"></string>

    <!-- Create Beacon Times -->
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>

    <!-- Photo Picker Strings -->
    <string name="change_photo">Change Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_photo">Choose Photo</string>

    <!-- MISC -->
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="bullet">&#8226;</string>

    <!-- My Account Strings -->
    <string name="real_name">First Last</string>
    <string name="change_password">Change Password</string>
    <string name="saved_info">Saved Information</string>

    <!-- Filter Beacon Strings -->
    <string name="starts_within">Starts</string>
    <string name="within">within</string>
    <string name="any">Any</string>
    <string name="one_hour">1 hr</string>
    <string name="three_hour">3 hr</string>
    <string name="six_hour">6 hr</string>
    <string name="twelve_hour">12 hr</string>

    <string name="rating">Rating</string>
    <string name="at_least">at least</string>
    <string name="twentyfive">25</string>
    <string name="onehundred">100</string>
    <string name="fivehundred">500</string>

    <string name="distance">Distance</string>
    <string name="distance_filler">0 mi</string>
    <string name="less_than">less than</string>

    <string name="sort">Sort</string>
    <string name="by">by</string>
    <string name="popularity">Popularity</string>
    <string name="highest_match">Highest Match</string>
    <string name="title_activity_login">loginActivity</string>
    <string name="title_activity_login_signup">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="LoginBtn">Login</string>
    <string name="SignupBtn">Sign Up</string>
    <string name="LogoutBtn">Log Out</string>

    <!-- List Beacon Strings -->
    <string name="temp_saved_count">Saved 3+</string>
    <string name="saved">Saved</string>
    <string name="sort_filler">Sort By</string>
    <string name="times">times</string>

    <!-- Change Password Strings -->
    <string name="enter_password">Enter your current password</string>
    <string name="pick_password">Pick a new password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>

    <!-- View Beacon -->
    <string name="save_beacon">Save Beacon</string>

    <!-- Settings Beacon -->
    <string name="phone">Phone</string>
    <string name="mobile">Mobile</string>
    <string name="work">Work</string>
    <string name="email">Email</string>
    <string name="settings_web_text">Website</string>
    <string name="settings_address_text">Address</string>

    <!-- Notifications settings -->
    <string name="vibrate">Vibrate</string>
    <string name="tags">Tags</string>
    <string name="add_tag">Add a Tag</string>
    <string name="notification_distance">Distance</string>
    <string name="less">Less than</string>
    <string name="greater">Greater than</string>
    <string name="one_mile">1 mile</string>
    <string name="five_mile">5 mile</string>
    <string name="ten_mile">10 mile</string>

    <string name="time">Time</string>
    <string name="after">After</string>

    <string-array name="distance_compare_array">
        <item>Less Than</item>
        <item>Greater Than</item>
    </string-array>
    <string-array name="distance_value_array">
        <item>1 mile</item>
        <item>5 miles</item>
        <item>10 miles</item>
        <item>20 miles</item>
    </string-array>
</resources>
